refactor : 매개변수 인자 맞춤